# copperbench

./: .gitignore  LICENSE  MANIFEST.in  README.md  clearcache.c  cobrabench.py  copperbench.py  pyproject.toml  requirements.txt
copperbench/: __main__.py  __version__.py  bench.py  postprocess.py  utils.py
copperbench/templates/: batch_job.slurm.jinja2  compress_results.slurm.jinja2  postprocess_results.py.jinja2  postprocess_results.slurm.jinja2  start.sh.jinja2  submit_all.sh.jinja2
examples/extended_cmd/: bench_config_configdict.json  bench_config_flexiblecmd.json  bench_config_instancedict.json  bench_config_instancelist.json  configs_1.txt  configs_2.txt  instance1.cnf.bz2  instances_1.txt  instances_3.txt
examples/postprocess/: bench.json  configs.txt  instances.txt
examples/tlsp/: bench_config.json  cobra_config.json  configs.txt  evaluation.py  gen_instance_file.py  instances.txt
examples/toy/: bench_config.json  cobra_config.json  configs.txt  evaluation.py  instances.txt
examples/tsp/: bench_alaspo.json  bench_clingo.json  configs_alaspo.txt  configs_clingo.txt  evaluate.py  extract_results_func.py  extract_results_regex.py  instances.txt  names_alaspo.json  names_clingo.json  tsp.lp
