[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
copperbench = "copperbench:__main__.main"

[tool.setuptools.dynamic]
version = {attr = "copperbench.__version__.__version__"}

[project]
name = "copperbench"
dynamic = ["version"]
authors = [
  { name="Tobias Geibinger", email="tobias.geibinger@tuwien.ac.at" },
]
requires-python = ">=3.7"
